# jassrealtime/webapi/handlers/search_documents_by_text.py
@@ -7,12 +7,25 @@ from .document import MAX_DOCUMENT_SIZE
 from .parameter_names import MESSAGE, TRACE
 
 
-def parse_query(query_argument):
-    pass
+def parse_query(query_argument: str) -> dict:
+    """
+    A query argument is a quad of the form :corpus_id:language:text
+
+    We can use the language "basic" to target the standard index.
+    :param query_argument:
+    :return:
+    """
+    query_parts = query_argument.split(":")
+    if len(query_parts) != 4:
+        raise ValueError("Invalid query quad: " + str(query_argument))
+    return {"": query_parts[0],
+            "corpus_id": query_parts[1],
+            "language": query_parts[2],
+            "text": query_parts[3]}
 
 
 def parse_queries(queries_argument: str) -> list:
-    [parse_query(query_argument) for query_argument in queries_argument]
+    return [parse_query(query_argument) for query_argument in queries_argument.split(",")]
 
 
 class SearchDocumentByTextHandler(BaseHandler):
@@ -24,7 +37,11 @@ class SearchDocumentByTextHandler(BaseHandler):
 
     def get(self):
         try:
-            from_index_argument = self.get_query_argument("from")
+            from_index_argument = self.get_query_argument("from", None)
+            if not from_index_argument:
+                self.missing_required_field("from")
+                return
+
             from_index = int(from_index_argument)
             if from_index < 0:
                 self.write_and_set_status({MESSAGE: "'from' must cannot be less than zero"},
@@ -32,6 +49,10 @@ class SearchDocumentByTextHandler(BaseHandler):
                 return
 
             size_argument = self.get_query_argument("size")
+            if not size_argument:
+                self.missing_required_field("size")
+                return
+
             size = int(size_argument)
 
             if size < 1:
@@ -44,8 +65,7 @@ class SearchDocumentByTextHandler(BaseHandler):
             # Get corpus id list and their respective bucket ids if any
             queries_argument = self.get_query_argument("queries", default=None)
             if not queries_argument:
-                self.write_and_set_status({MESSAGE: "Missing queries parameter"},
-                                          HTTPStatus.UNPROCESSABLE_ENTITY)
+                self.missing_required_field("queries")
                 return
 
             queries = parse_queries(queries_argument)
@@ -61,3 +81,6 @@ class SearchDocumentByTextHandler(BaseHandler):
             self.write_and_set_status({MESSAGE: "Internal server error", TRACE: trace},
                                       HTTPStatus.INTERNAL_SERVER_ERROR)
 
+    def missing_required_field(self, required_field):
+        self.write_and_set_status({MESSAGE: "Missing required parameters. {0}".format(required_field)},
+                                  HTTPStatus.UNPROCESSABLE_ENTITY)
