# jassrealtime/webapi/swagger_editor_format.yaml
@@ -1563,6 +1563,29 @@ definitions:
       structure:
         type: object
         description: "Search document query structure"
+        properties:
+          corpusId:
+            type: string
+          languages:
+            type: array
+            items:
+              type: string
+          groups:
+            type: array
+            items:
+              type: object
+              properties:
+                bucketId:
+                  type: string
+                types:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      type:
+                        type: string
+                      Properties:
+                        type: object
     example: {"structure": [{"corpusId": "jfh-corpus-english", "languages": ["en-CA"], "groups": []}, {"corpusId": "jfh-corpus-demo", "languages": ["en-EN", "fr-FR"], "groups": [{"bucketId": "29550cda-0c40-11e8-aa88-a8206600f845", "types": [{"type": "Animal", "Properties": {"schemaType": {"type": "string", "searchModes": ["noop", "edge"]}, "jeff": {"type": "string", "searchModes": ["basic"]}, "_documentID": {"type": "string", "searchModes": ["noop"]}, "_corpusID": {"type": "string", "searchModes": ["noop"]}, "notes": {"type": "string", "searchModes": ["language"]}}}, {"type": "Plant", "Properties": {"schemaType": {"type": "string", "searchModes": ["noop"]}, "_documentID": {"type": "string", "searchModes": ["noop"]}, "_corpusID": {"type": "string", "searchModes": ["noop"]}, "notes": {"type": "string", "searchModes": ["basic"]}, "NumProperty": {"type": "number"}}}]}]}]}
 
 
